tests/golden/type_errors/generic_enum_wrong_arity.cd
enum Box<T> { Value(T), Empty }
let value: Box<number, string> = Box.Value(1);
