tests/golden/type_errors/generic_enum_wrong_arity.err
Type error at 2:12: enum `Box` expects 1 type arguments but got 2
  let value: Box<number, string> = Box.Value(1);
             ^
